# Project-Shumeiko

./: Makefile  README.md  config.py  fastapi_lesson1.py  pyproject.toml
.github/workflows/: linters.yaml
migrations/: env.py
migrations/versions/: 127ba0aa9f1b_initial.py  249bc040e0a2_websocket.py  5790145937a2_websocket2.py  bd0366df12e9_add_operations.py  c3d599f76c0f_update_migration.py
models/: models.py
src/: config.py  fastapi_lesson1.py  router.py
src/auth/: auth.py  connection.py  database.py  manager.py  models.py  utils.py
src/chat/: models.py  router.py
src/operations/: router.py  schemas.py
src/pages/: router.py
src/templates/: base.html  search.html
tests/: conftest.py  test_auth.py  test_operations.py
