[project]
name = "project-shumeiko"
version = "0.1.0"
description = ""
authors = [
    {name = "Timamov",email = "timurmov25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.115.13,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi-cache (>=0.1.0,<0.2.0)",
    "redis (>=6.2.0,<7.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
